fix: reduce height of answer box on mobile view

--- a/CSS/cssQuizGame/quiz.css
+++ b/CSS/cssQuizGame/quiz.css
@@ -84,7 +84,7 @@ body {
     .answer-box {
     justify-content: center;
     padding: 0px;
-    height: 100px;
+    height: 90px;
     }
 
 }
